avoid file button shrinking when video title is too long

--- a/src/components/room/style.less
+++ b/src/components/room/style.less
@@ -10,6 +10,13 @@
     input[type=file] {
       display: none;
     }
+    .video-desc {
+      word-break: break-all;
+    }
+    .file-button {
+      flex-shrink: 0;
+      margin-left: 10px;
+    }
   }
   .video-container {
     display: flex;
